# moodring-vibe

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  workflow_subagents.md
.claude/: workflow-decision-matrix.md
.claude/agents/: claude-md-policy-analyst.md  code-implementation-specialist.md  codebase-organization-specialist.md  commit-message-specialist.md  git-workflow-manager.md  pre-commit-quality-guard.md  tech-debt-cleanup-planner.md  test-coverage-enforcer.md  workflow-automation-analyst.md
.claude/commands/: mr-code.md  mr-policy.md
moodring_backend/: Cargo.toml  diesel.toml  tarpaulin-report.json
moodring_backend/migrations/2025-07-29-021509_create_temp_songs/: down.sql  up.sql
moodring_backend/migrations/2025-08-06-011323_create_users/: up.sql
moodring_backend/migrations/2025-08-09-043111_create_tags/: down.sql  up.sql
moodring_backend/migrations/2025-08-09-043135_create_song_tags/: down.sql  up.sql
moodring_backend/src/: lib.rs  main.rs  schema.rs
moodring_frontend/: .env.example  .gitignore  App.tsx  app.config.js  app.json  eslint.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json
moodring_frontend/__tests__/: App.test.tsx
moodring_frontend/coverage/: clover.xml  coverage-final.json  lcov.info
moodring_frontend/coverage/lcov-report/: App.tsx.html  index.html  index.ts.html
moodring_frontend/src/components/: index.ts
moodring_frontend/src/contexts/: AuthContext.tsx
moodring_frontend/src/hooks/: useAnimation.ts  useSpotifyActivity.ts
moodring_frontend/src/services/: authService.ts  spotifyApi.ts  (+1 more)
(+28 files in other folders)
