[package]
name = "moodring_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.0"
chrono = { version = "0.4", features = ["serde"] }