[package]
name = "moodring_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.1"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
serde_json = "1.0"